--- a/app/src/main/res/layout/control_view.xml
+++ b/app/src/main/res/layout/control_view.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--背景-->
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,14 +19,17 @@
         <!--android:text="灯光1"-->
         <!--android:id="@+id/lightName"-->
         <!--android:layout_marginTop="5dp" />-->
+
+    <!--返回-->
     <ImageButton
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/back_btn"
-        android:background="@drawable/back_bnt2"
+        android:background="@drawable/back_bnt"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp" />
+        android:layout_marginLeft="20dp" />
 
+    <!--灯光名字-->
     <EditText
         android:layout_width="100dp"
         android:layout_height="50dp"
@@ -33,80 +37,170 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
 
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="开关"
-        android:id="@+id/switch1"
-        android:textSize="20dp"
-        android:showText="false"
-        android:singleLine="false"
-        android:splitTrack="false"
-        android:layout_above="@+id/seekBar"
+    <!--一堆黄点-->
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/blueDot1"
+        android:src = "@drawable/blue_dot"
         android:layout_alignLeft="@+id/seekBar"
-        android:layout_alignStart="@+id/seekBar"
-        android:layout_marginBottom="41dp" />
+        android:layout_alignBottom="@+id/seekBar"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"/>
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/blueDot2"
+        android:src = "@drawable/blue_dot"
+        android:layout_alignLeft="@+id/blueDot1"
+        android:layout_alignBottom="@+id/blueDot1"
+        android:layout_marginLeft="78dp"/>
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/blueDot3"
+        android:src = "@drawable/blue_dot"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@+id/blueDot1"/>
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/blueDot4"
+        android:src = "@drawable/blue_dot"
+        android:layout_alignLeft="@+id/blueDot3"
+        android:layout_alignBottom="@+id/blueDot3"
+        android:layout_marginLeft="78dp"/>
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/blueDot5"
+        android:src = "@drawable/blue_dot"
+        android:layout_alignBottom="@+id/blueDot4"
+        android:layout_alignRight="@+id/seekBar"
+        android:layout_marginRight="5dp"/>
+
+    <!--一堆绿点-->
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/greenDot1"
+        android:src = "@drawable/green_dot"
+        android:layout_alignLeft="@+id/seekBar2"
+        android:layout_alignBottom="@+id/seekBar2"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"/>
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/greenDot2"
+        android:src = "@drawable/green_dot"
+        android:layout_alignLeft="@+id/greenDot1"
+        android:layout_alignBottom="@+id/greenDot1"
+        android:layout_marginLeft="78dp"/>
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/greenDot3"
+        android:src = "@drawable/green_dot"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@+id/greenDot1"/>
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/greenDot4"
+        android:src = "@drawable/green_dot"
+        android:layout_alignLeft="@+id/greenDot3"
+        android:layout_alignBottom="@+id/greenDot3"
+        android:layout_marginLeft="78dp"/>
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/greenDot5"
+        android:src = "@drawable/green_dot"
+        android:layout_alignBottom="@+id/greenDot3"
+        android:layout_alignRight="@+id/seekBar2"
+        android:layout_marginRight="5dp"/>
 
     <SeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxHeight="10dp"
+        android:maxHeight="12dp"
         android:id="@+id/seekBar"
+        android:scrollIndicators="none"
+        android:progressDrawable="@drawable/seekbar_style1"
+        android:thumb="@drawable/seekbar_thumb"
+        android:progress="70"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="215dp"
-        android:layout_marginLeft="55dp"
-        android:layout_marginRight="55dp"
-        android:scrollIndicators="none"
-        android:progressDrawable="@drawable/seekbar_style"
-        android:progress="60" />
+        android:layout_marginBottom="228dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"/>
 
     <SeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxHeight="10dp"
+        android:maxHeight="12dp"
         android:id="@+id/seekBar2"
+        android:progressDrawable="@drawable/seekbar_style2"
+        android:thumb="@drawable/thumb"
+        android:clickable="true"
+        android:progress="50"
         android:layout_alignTop="@+id/seekBar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:layout_marginLeft="55dp"
-        android:layout_marginRight="55dp"
-        android:clickable="true"
-        android:progress="0" />
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"/>
 
     <ImageButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:id="@+id/switchBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="90dp"
+        android:background="@drawable/switch_enabled"/>
+
+    <ImageButton
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:id="@+id/imageCold"
-        android:layout_marginLeft="30dp"
-        android:background="@color/accent_material_dark"
+        android:layout_marginLeft="28dp"
+        android:background="@drawable/lengguang_guan"
         android:layout_marginBottom="36dp"
         android:layout_alignParentBottom="true"/>
 
     <ImageButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="90dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="85dp"
         android:id="@+id/imageNormal"
-        android:background="@color/light_yellow"
+        android:background="@drawable/ziranguang_guan"
         android:layout_alignTop="@+id/imageCold"
         android:layout_alignLeft="@+id/imageCold"/>
 
     <ImageButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="210dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="85dp"
         android:id="@+id/imageWarm"
-        android:background="@android:color/holo_orange_light"
+        android:background="@drawable/nuanguang_guan"
+        android:layout_alignLeft="@+id/imageNormal"
         android:layout_alignTop="@+id/imageNormal"/>
 
     <ImageButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="300dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="85dp"
         android:id="@+id/imageSleep"
-        android:background="@android:color/darker_gray"
+        android:background="@drawable/shengdian_guan"
+        android:layout_alignLeft="@+id/imageWarm"
         android:layout_alignTop="@+id/imageNormal"/>
 
     <TextView
@@ -116,7 +210,7 @@
         android:text="0%"
         android:id="@+id/textView"
         android:layout_alignBottom="@+id/seekBar"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="40dp"
         android:layout_centerHorizontal="true"/>
 
     <TextView
@@ -127,31 +221,6 @@
         android:id="@+id/textView2"
         android:layout_alignStart="@+id/textView"
         android:layout_alignBottom="@+id/seekBar2"
-        android:layout_marginBottom="20dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="冷光"
-        android:id="@+id/textView3"
-        android:layout_above="@+id/textView2"
-        android:layout_alignStart="@+id/seekBar"
-        android:layout_alignBottom="@+id/seekBar"
-        android:layout_marginLeft="-40dp"
-        android:layout_marginBottom="3dp"
-        android:textSize="22dp"
-        android:textStyle="italic" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="暖光"
-        android:id="@+id/textView4"
-        android:layout_alignStart="@+id/seekBar2"
-        android:layout_alignBottom="@+id/seekBar2"
-        android:layout_marginLeft="-40dp"
-        android:layout_marginBottom="3dp"
-        android:textSize="22dp"
-        android:textStyle="italic" />
+        android:layout_marginBottom="40dp" />
 
 </RelativeLayout>
